Java 17 (I276).